# modDAW

./: .gitignore  README.md
.codex/: config.toml
docs/: architecture.md  milestones.md  protocol.md  ui-timeline-notes.md  validation-notes.md
juce-host/: CMakeLists.txt
juce-host/Source/: App.cpp  App.h  Main.cpp  MainWindow.cpp  MainWindow.h
juce-host/Source/engine/: AnalysisState.cpp  AnalysisState.h  AudioEngine.cpp  AudioEngine.h  AutomationState.cpp  AutomationState.h  BehaviourParser.cpp  BehaviourParser.h  ClockDomain.cpp  ClockDomain.h  ClockDomainManager.cpp  ClockDomainManager.h  ClockDomainState.cpp  ClockDomainState.h  EngineConnection.cpp  EngineConnection.h  EngineProcessManager.cpp  EngineProcessManager.h  MessageEnvelope.cpp  MessageEnvelope.h  MessageParser.cpp  MessageParser.h  MixerEngine.cpp  MixerEngine.h  MixerState.cpp  MixerState.h  Module.h  ModuleRegistry.cpp  ModuleRegistry.h  ModuleState.cpp  ModuleState.h  ProjectState.cpp  ProjectState.h  RecoveryState.cpp  RecoveryState.h  RegionState.cpp  RegionState.h  RenderState.cpp  RenderState.h  RouteState.cpp  (+15 more)
juce-host/Source/modules/: DemoToneModule.cpp  DemoToneModule.h  DroneModule.cpp  DroneModule.h  PatternModule.cpp  PatternModule.h
juce-host/Source/ui/: AutomationPanelComponent.cpp  AutomationPanelComponent.h  ClockDomainsPanelComponent.cpp  ClockDomainsPanelComponent.h  CodeSurfaceComponent.cpp  CodeSurfaceComponent.h  GlobalRulerComponent.cpp  GlobalRulerComponent.h  LogPanelComponent.cpp  LogPanelComponent.h  MainComponent.cpp  MainComponent.h  MixerPanelComponent.cpp  MixerPanelComponent.h  ModuleLanesComponent.cpp  ModuleLanesComponent.h  ModulesPanelComponent.cpp  ModulesPanelComponent.h  RouteGraphPanelComponent.cpp  RouteGraphPanelComponent.h  RouteListPanelComponent.cpp  RouteListPanelComponent.h  StatusBarComponent.cpp  StatusBarComponent.h  TimingInspectorComponent.cpp  TimingInspectorComponent.h  TransportPanelComponent.cpp  TransportPanelComponent.h  ValidationPanelComponent.cpp  ValidationPanelComponent.h
juce-host/Source/util/: Ids.h  TimeUtils.h
projects/: demo-project.json
sc-engine/: boot.scd
sc-engine/app/: Analysis.scd  Arrangement.scd  Automation.scd  ClockDomains.scd  DemoModules.scd  EngineState.scd  Main.scd  Mixer.scd  Performance.scd  ProjectState.scd  Protocol.scd  Render.scd  Routes.scd  Structural.scd  Transport.scd  Validation.scd
sc-engine/projects/: demo-project.json
sc-engine/scripts/: run_engine.bat  run_engine.sh
tools/notes/: dev-setup.md
